--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
       "lint": "next lint"
    },
    "dependencies": {
+      "@clerk/nextjs": "^6.9.6",
+      "@radix-ui/react-slot": "^1.1.1",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
       "lucide-react": "^0.469.0",
@@ -20,12 +22,14 @@
    },
    "devDependencies": {
       "@eslint/eslintrc": "^3",
+      "@prisma/client": "^6.1.0",
       "@types/node": "^20",
       "@types/react": "^19",
       "@types/react-dom": "^19",
       "eslint": "^9",
       "eslint-config-next": "15.1.2",
       "postcss": "^8",
+      "prisma": "^6.1.0",
       "tailwindcss": "^3.4.1",
       "typescript": "^5"
    }
