--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
       "@clerk/nextjs": "^6.9.6",
       "@hookform/resolvers": "^3.10.0",
       "@prisma/client": "^6.2.1",
+      "@radix-ui/react-checkbox": "^1.1.3",
       "@radix-ui/react-dialog": "^1.1.4",
+      "@radix-ui/react-dropdown-menu": "^2.1.5",
       "@radix-ui/react-label": "^2.1.1",
       "@radix-ui/react-select": "^2.1.4",
       "@radix-ui/react-slot": "^1.1.1",
       "@radix-ui/react-switch": "^1.1.2",
+      "@radix-ui/react-tooltip": "^1.1.7",
       "axios": "^1.7.9",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
+      "date-fns": "^4.1.0",
       "lucide-react": "^0.469.0",
       "next": "15.1.2",
       "next-themes": "^0.4.4",
