--- a/package.json
+++ b/package.json
@@ -1,58 +1,65 @@
 {
-  "name": "wealth-ai",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^6.9.6",
-    "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.2.1",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.1.5",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.7",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.469.0",
-    "next": "15.3.3",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.54.2",
-    "react-spinners": "^0.15.0",
-    "recharts": "^2.15.3",
-    "sonner": "^1.7.4",
-    "svix": "^1.45.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.6",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "postcss": "^8",
-    "prisma": "^6.1.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.6"
-  }
+   "name": "wealth-ai",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev --turbopack",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "email": "email dev"
+   },
+   "dependencies": {
+      "@clerk/nextjs": "^6.9.6",
+      "@hookform/resolvers": "^3.10.0",
+      "@prisma/client": "^6.2.1",
+      "@radix-ui/react-checkbox": "^1.1.3",
+      "@radix-ui/react-dialog": "^1.1.5",
+      "@radix-ui/react-dropdown-menu": "^2.1.5",
+      "@radix-ui/react-label": "^2.1.1",
+      "@radix-ui/react-progress": "^1.1.7",
+      "@radix-ui/react-select": "^2.1.4",
+      "@radix-ui/react-slot": "^1.2.3",
+      "@radix-ui/react-switch": "^1.1.2",
+      "@radix-ui/react-tooltip": "^1.1.7",
+      "@react-email/components": "^0.0.42",
+      "@react-email/render": "^1.1.2",
+      "axios": "^1.7.9",
+      "class-variance-authority": "^0.7.1",
+      "clsx": "^2.1.1",
+      "date-fns": "^4.1.0",
+      "inngest": "^3.39.1",
+      "lucide-react": "^0.469.0",
+      "mailersend": "^2.6.0",
+      "next": "15.3.3",
+      "next-themes": "^0.4.6",
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
+      "react-hook-form": "^7.54.2",
+      "react-spinners": "^0.15.0",
+      "recharts": "^2.15.3",
+      "sonner": "^1.7.4",
+      "svix": "^1.45.1",
+      "tailwind-merge": "^2.6.0",
+      "tailwindcss-animate": "^1.0.7",
+      "vaul": "^1.1.2",
+      "zod": "^3.24.1"
+   },
+   "devDependencies": {
+      "@eslint/eslintrc": "^3",
+      "@types/node": "^20",
+      "@types/react": "19.1.6",
+      "@types/react-dom": "19.1.6",
+      "eslint": "^9",
+      "eslint-config-next": "15.3.3",
+      "postcss": "^8",
+      "prisma": "^6.1.0",
+      "react-email": "4.0.16",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5"
+   },
+   "overrides": {
+      "@types/react": "19.1.6",
+      "@types/react-dom": "19.1.6"
+   }
 }
