--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@radix-ui/react-dialog": "^1.1.5",
       "@radix-ui/react-dropdown-menu": "^2.1.5",
       "@radix-ui/react-label": "^2.1.1",
+      "@radix-ui/react-popover": "^1.1.15",
       "@radix-ui/react-progress": "^1.1.7",
       "@radix-ui/react-select": "^2.1.4",
       "@radix-ui/react-slot": "^1.2.3",
@@ -34,10 +35,12 @@
       "next": "15.3.3",
       "next-themes": "^0.4.6",
       "react": "19.1.0",
+      "react-day-picker": "^9.11.0",
       "react-dom": "19.1.0",
       "react-hook-form": "^7.54.2",
       "react-spinners": "^0.15.0",
       "recharts": "^2.15.3",
+      "resend": "^6.1.0",
       "sonner": "^1.7.4",
       "svix": "^1.45.1",
       "tailwind-merge": "^2.6.0",
