--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "mailersend": "^2.6.0",
       "next": "15.3.3",
       "next-themes": "^0.4.6",
+      "nextjs-toploader": "^3.9.17",
       "react": "19.1.0",
       "react-day-picker": "^9.11.0",
       "react-dom": "19.1.0",
@@ -50,6 +51,7 @@
    },
    "devDependencies": {
       "@eslint/eslintrc": "^3",
+      "@tailwindcss/postcss": "^4.1.13",
       "@types/node": "^20",
       "@types/react": "19.1.6",
       "@types/react-dom": "19.1.6",
@@ -58,7 +60,7 @@
       "postcss": "^8",
       "prisma": "^6.1.0",
       "react-email": "4.0.16",
-      "tailwindcss": "^3.4.1",
+      "tailwindcss": "^4.1.13",
       "typescript": "^5"
    },
    "overrides": {
