--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
       "email": "email dev"
    },
    "dependencies": {
+      "@arcjet/inspect": "^1.0.0-beta.12",
+      "@arcjet/next": "^1.0.0-beta.12",
       "@clerk/nextjs": "^6.9.6",
       "@hookform/resolvers": "^3.10.0",
       "@prisma/client": "^6.2.1",
